--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,13 +1,16 @@
 <ul class="sidebar-nav">
   {% if user.is_authenticated %}
     <li>
-    User: {{ user.username }}
+      User: {{ user.username }}
     </li>
     <li>
-    <a href="{% url 'logout' %}">Logout</a>
+      <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <a href="{% url 'logout' %}">Log out</a>
+      </form>
     </li>
     <br>
-    {% else %}
+  {% else %}
     <li>
       <a href="{% url 'login' %}">Login</a>
     </li>
