--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,21 +2,21 @@
 
 {% block content %}
   <h1>Login</h1>
-  {% if error %}
-    <p style="color: red">{{ error }}</p>
+  {% if form.errors %}
+    <p style="color: red">Invalid credentials</p>
   {% endif %}
 
   <form action="{% url 'login' %}" method="post">
   {% csrf_token %}
-    <label>Username:
-      <input type="text" name="username">
-    </label>
-    <label>Password}:
-      <input type="password" name="password">
-    </label>
-    <br>
-    <label>Password}:
+{#    <label>Username:#}
+{#      <input type="text" name="username">#}
+{#    </label>#}
+{#    <label>Password:#}
+{#      <input type="password" name="password">#}
+{#    </label>#}
+{#    <br>#}
+    {{ form.as_p }}
       <input type="submit" name="Submit">
-    </label>
+  <input type="hidden" name="next" value="{{ next }}">
   </form>
 {% endblock content %}
